# avrocurio

./: .gitignore  CHANGELOG.md  Justfile  README.md  compose.yaml  pyproject.toml  towncrier.toml
.github/: CODEOWNERS  renovate.json5
.github/workflows/: ci.yml  release.yml
changelog.d/: +54941ec0.fix.md  +77048b6f.misc.md  +899a2aac.misc.md  +e6eeed94.change.md
src/avrocurio/: __init__.py  apicurio_client.py  config.py  exceptions.py  inmemory_client.py  protocol.py  schema_client.py  serializer.py  wire_format.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_init.py  test_inmemory_client.py  test_schema_client.py  test_schemas.py  test_serializer.py  test_wire_format.py
tests/integration/: conftest.py  test_end_to_end.py  test_schema_evolution.py
